# omnia_hackathon_2

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  fetch-release.ps1  fetch-release.sh  justfile
.github/workflows/: windows.yaml
bot/: image_util.py  main.py  marble_client.py  marble_neural_network.py  pyproject.toml  util.py
bot/playground/: image_recognition.ipynb
bot/proto/: service.proto  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
proto/: service.proto
src/: client.rs  client_cam.rs  client_grpc_server.rs  client_grpc_service.rs  config.rs  player.rs  player_input.rs  protocol.rs  server.rs  server_cam.rs  server_input.rs  track_gen.rs  track_mesh.rs  world.rs
