[package]
name = "hackathon_game"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
async-compat = "0.2.4"
bevy = "0.15.3"
clap = { version = "4.5.32", features = ["derive"] }
lightyear = "0.19.0"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
