[package]
name = "hackathon_game"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
approx = "0.5.1"
async-compat = "0.2.4"
bevy = "0.15.3"
bevy_image_export = { git = "https://github.com/julianbieber/bevy_image_export.git", rev = "2dfa04c15119f3fe9b7fb7f8678df6c45c5bf3a0"}
bevy_panorbit_camera = "0.25.0"
bevy_rapier3d = "0.29.0"
clap = { version = "4.5.32", features = ["derive"] }
image = "0.25.5"
lightyear = "0.19.0"
noise = "0.9.0"
prost = "0.13.5"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tonic = "0.13.0"

[build-dependencies]
tonic-build = "0.13.0"
