[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pyarrow>=20.0.0",
    "scikit-image>=0.25.2",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]
